Changed the pool background cement to a solid color instead of textured
Pressure tab: Scene 3: Have the masses sit atop the grass instead of in front of it
Pressure tab: Scene 3: Fixed a bug which was preventing block velocity from going to zero when dropped on the ground (as seen in next drop)
Changed to pointy rectangular slider knobs
# 0.00.57 (63870) May 1, 2012
Water tower tab: Added a nozzle to the hose icon
Made pressure sensor read "-" instead of "0.000" when in the dirt/grass
Added original image assets for new textures
# 0.00.56 (63862) Apr 30, 2012
Added screenshot
Removed @Override annotation for interface implementations to facilitate testing under Java 1.5
Pressure tab: Fixed "seam" pattern in the grasses, visible when atmosphere was off
Pressure tab: Fixed cutaway earth graphics when atmosphere is off
Pressure tab: Moved the grass down a little bit because there is a blue "air" gap between the grass and the ground
Pressure tab: added border cement to the pools
Flow tab: updated handle image to be more visible against the brown earth color
Flow tab: Show earth cutaway
Pressure tab: Scene 3: Fixed: block dragging code doesn't have the right scale at full screen
Pressure tab: Made pool background gray and textured like concrete
Water tower tab: Reduce precision in pressure sensor when over the water tower water
Added developer menu items for the dirt color
Pressure tab: added grass for all scenes
Water tower tab: Fixed: units metric/english control should be left justified instead of centered in units box
Water tower tab: Added hose icon
Water Tower tab: added ruler icon
Flow tab: Made font for "dots" checkbox larger
Flow + Water Tower tabs: Fixed: Reset all doesn't reset pause/running state of the clock
Flow + Water Tower tabs: Fixed: Reset all doesn't reset the radio button for slow motion
Pressure tab: Fixed: On the first tab: Reset All doesn't reset the amount of water in the rectangular pool, but does the others.